kubernetes/certificate-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: certificate-service
  labels:
    app: certificate-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: certificate-service
  template:
    metadata:
      labels:
        app: certificate-service
    spec:
      containers:
      - name: certificate-service
        image: lms/certificate-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: certificate-service
spec:
  selector:
    app: certificate-service
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
