kubernetes/email-service-deployment.yaml
# email-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-service
  labels:
    app: email-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: email-service
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: email-service
    spec:
      containers:
        - name: email-service
          image: email-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8076
          resources:
            limits:
              cpu: "300m"
              memory: "384Mi"
            requests:
              cpu: "100m"
              memory: "128Mi"
          volumeMounts:
            - name: email-service-volume
              mountPath: /usr/app
      volumes:
        - name: email-service-volume
          persistentVolumeClaim:
            claimName: email-service-pvc
---
# email-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: email-service
  labels:
    app: email-service
spec:
  ports:
    - port: 8076
      targetPort: 8076
      protocol: TCP
      name: http
  selector:
    app: email-service
