kubernetes/email-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-service
  labels:
    app: email-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: email-service
  template:
    metadata:
      labels:
        app: email-service
    spec:
      containers:
      - name: email-service
        image: lms/email-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8076
---
apiVersion: v1
kind: Service
metadata:
  name: email-service
spec:
  selector:
    app: email-service
  ports:
  - port: 8076
    targetPort: 8076
  type: ClusterIP
