kubernetes/notification-service-service.yaml
# notification-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  labels:
    app: notification-service
spec:
  ports:
    - port: 1114
      targetPort: 1114
      protocol: TCP
      name: http
  selector:
    app: notification-service
---
