kubernetes/support-backend-service.yaml
---
# support-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: support-backend
  labels:
    app: support-backend
spec:
  ports:
    - port: 8074
      targetPort: 8074
      protocol: TCP
      name: http
  selector:
    app: support-backend
---
